--- a/.github/workflows/luacheck.yml
+++ b/.github/workflows/luacheck.yml
@@ -6,6 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@master
       - name: Install Lua/LuaJIT
         uses: leafo/gh-actions-lua@v8.0.0
         with:
