--- a/.github/workflows/luacheck.yml
+++ b/.github/workflows/luacheck.yml
@@ -23,6 +23,10 @@ jobs:
           # URL to a custom configuration (`.luacheckrc`) file that will be used as
           # the default configuration file.
           config: https://raw.githubusercontent.com/bmos/FG-luacheck/main/fg.luacheckrc
+          
+          # Additional command-line arguments.
+          # See https://luacheck.readthedocs.io/en/stable/cli.html
+          args: '--exclude-files .install/*'
 
           # Emits annotations for source code at locations parsed from the output.
           # Must be set to "none", "warning" or "error".
